src/test/deca/context/valid/simpleinit.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    
// 
// Historique:
//    cree le 01/01/2022

{
   int a = 5;

}