src/test/deca/context/invalid/provided/affect-incompatible.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Can not assign a boolean to int
// 
// Historique:
//    cree le 01/01/2022

{
   int a;
   boolean b;

   // Doit etre refuse.
   a = b;
}
